Changed the release notes.

--- a/release-notes.html
+++ b/release-notes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>
-        TUX Boundle Release Notes for Sencha Touch 2.2.0
+        TUX Bundle Release Notes for Sencha Touch 2.2.0
     </title>
     <link rel="stylesheet" type="text/css" href="examples/resources/shared/css/style.css" media="all">
 </head>
@@ -12,12 +12,12 @@
 
     <div class="release">
         <h1>
-            TUX Boundle Release Notes for Sencha Touch 2.2.0
+            TUX Bundle Release Notes for Sencha Touch
         </h1>
 
         <p class="notes">
-            Release Notes: Release Notes: May 1, 2013<br>
-            Version Number: 0.8.0
+            Release Notes: Release Notes: September 21, 2013<br>
+            Version Number: 1.0.0-b1
         </p>
 
         <h2>
