Added the README.md requirements section.

--- a/release-notes.html
+++ b/release-notes.html
@@ -2,17 +2,36 @@
 <html>
 <head>
     <title>
-        TUX Bundle Release Notes for Sencha Touch 2.2.0
+        TUX Bundle Release Notes for Sencha Touch 2.x.x
     </title>
     <link rel="stylesheet" type="text/css" href="examples/resources/shared/css/style.css" media="all">
 </head>
 <body>
 
 <div id="releases">
+	
+	<div class="release">
+        <h1>
+            Release Notes for TUX 1.1.0 Beta 2
+        </h1>
+
+        <p class="notes">
+            Release Notes: Release Notes: xxx<br>
+            Version Number: 1.0.0-b2
+        </p>
+
+        <ul>
+            <li>Enhancements/Changes
+                <ul>
+                    <li>Removed the Sencha cmd folders from the repo. Developers now have to download Sencha Touch and Sencha cmd to create the workspace by their own in order to run the included examples.</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
     <div class="release">
         <h1>
-            TUX Bundle Release Notes for Sencha Touch
+            Release Notes for TUX 1.1.0 Beta 1
         </h1>
 
         <p class="notes">
