Updated the README.md file adding the "Getting Started" section.

--- a/release-notes.html
+++ b/release-notes.html
@@ -23,7 +23,7 @@
         <ul>
             <li>Enhancements/Changes
                 <ul>
-                    <li>Removed the Sencha cmd folders from the repo. Developers now have to download Sencha Touch and Sencha cmd to create the workspace by their own in order to run the included examples.</li>
+                    <li>Removed the Sencha Touch folder from the repo. Developers have to download the framework and generate a page (app) within the Workspace using Sencha Cmd to run the components examples.</li>
                 </ul>
             </li>
         </ul>
